--- a/pag-sugestao.html
+++ b/pag-sugestao.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">        
     <link rel="stylesheet" href="assets/styles/style.css">
-    <link rel="shortcut icon" href="qflix-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/qflix-icon.png" type="image/x-icon">
     <title>QFLIX</title>
 </head>
 <body>
     <section id="section-pag2">
     <header id="header-pag2">
-        <img src="qflix-logo.png" alt="Logo QFLIX">
+        <img src="./assets/img/qflix-logo.png" alt="Logo QFLIX">
     </header>
         <div id="content-pag2">
             <p>
