--- a/index.html
+++ b/index.html
@@ -3,17 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/styles/homestyle.css">
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
     <title>QFLIX</title>
 </head>
 <body>
-    
-    Running develop!!
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+        <div class = 'init-container'>
+            <header id="header-pag2">
+                <img src="./assets/img/qflix-logo.png" alt="Logo QFLIX">
+            </header>
+            <div id="content-pag2">
+                <h3 id = frase1>Q gênero você gostaria de assistir hoje?</h3>
+            </div>
+
+            <div class = 'init-forms'>
+                <div class = 'buttons'>
+                    <ul>
+                        <li>
+                            <form action=""><input type="button" type="submit" value="TERROR"></form>
+                        </li>
+                        <li>
+                            <form action=""><input type="button" type="submit" value="COMÉDIA"></form>
+                        </li>
+                        <li>
+                            <form action=""><input type="button" type="submit" value="ROMANCE"></form>
+                        </li>
+                        <li>
+                            <form action=""><input type="button" type="submit" value="AÇÃO"></form>
+                        </li>
+                        <li>
+                            <form action=""><input type="button" type="submit" value="SUSPENSE"></form>
+                        </li>
+                        <li>
+                            <form action=""><input type="button" type="submit" value="DRAMA"></form>
+                        </li>
+                        <li>
+                            <form action=""><input type="button" type="submit" value="AVENTURA"></form>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
