--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,">
     <link rel="stylesheet" href="./assets/styles/homestyle.css">
     <link rel="stylesheet" href="./assets/styles/style.css">
     <title>QFLIX</title>
 </head>
 <body>
-        <div class = 'init-container'>
+
             <header id="header-pag2">
                 <img src="./assets/img/qflix-logo.png" alt="Logo QFLIX">
             </header>
@@ -18,31 +18,31 @@
 
             <div class = 'init-forms'>
                 <div class = 'buttons'>
-                    <ul>
+                    <ul >
                         <li>
-                            <form action=""><input type="button" type="submit" value="TERROR"></form>
+                            <input type="button" type="submit" value="TERROR">
                         </li>
                         <li>
-                            <form action=""><input type="button" type="submit" value="COMÉDIA"></form>
+                            <input type="button" type="submit" value="COMÉDIA">
                         </li>
                         <li>
-                            <form action=""><input type="button" type="submit" value="ROMANCE"></form>
+                            <input type="button" type="submit" value="ROMANCE">
                         </li>
                         <li>
-                            <form action=""><input type="button" type="submit" value="AÇÃO"></form>
+                            <input type="button" type="submit" value="AÇÃO">
                         </li>
                         <li>
-                            <form action=""><input type="button" type="submit" value="SUSPENSE"></form>
+                            <input type="button" type="submit" value="SUSPENSE">
                         </li>
                         <li>
-                            <form action=""><input type="button" type="submit" value="DRAMA"></form>
+                            <input type="button" type="submit" value="DRAMA">
                         </li>
                         <li>
-                            <form action=""><input type="button" type="submit" value="AVENTURA"></form>
+                            <input type="button" type="submit" value="AVENTURA">
                         </li>
                     </ul>
                 </div>
             </div>
-        </div>
+
 </body>
 </html>
