--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,">
     <link rel="stylesheet" href="./assets/styles/homestyle.css">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="shortcut icon" href="./assets/img/qflix-icon.png" type="image/x-icon">
     <title>QFLIX</title>
 </head>
 <body>
