--- a/index.html
+++ b/index.html
@@ -1,51 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/homestyle.css">
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link rel="shortcut icon" href="./assets/img/qflix-icon.png" type="image/x-icon">
     <title>QFLIX</title>
 </head>
+
 <body>
 
 
-            <header id="header-pag2">
-                <img src="./assets/img/qflix-logo.png" alt="Logo QFLIX">
-            </header>
-            <div id="content-pag2">
-                <h3 id = frase1>Q gênero você gostaria de assistir hoje?</h3>
-            </div>
+    <header id="header-pag2">
+        <img src="./assets/img/qflix-logo.png" alt="Logo QFLIX">
+    </header>
+    <div id="content-pag2">
+        <h3 id=frase1>Q gênero você gostaria de assistir hoje?</h3>
+    </div>
 
-            <div class = 'init-forms'>
-                <div class = 'buttons'>
-                    <ul >
-                        <li>
-                            <input type="button" type="submit" value="TERROR">
-                        </li>
-                        <li>
-                            <input type="button" type="submit" value="COMÉDIA">
-                        </li>
-                        <li>
-                            <input type="button" type="submit" value="ROMANCE">
-                        </li>
-                        <li>
-                            <input type="button" type="submit" value="AÇÃO">
-                        </li>
-                        <li>
-                            <input type="button" type="submit" value="SUSPENSE">
-                        </li>
-                        <li>
-                            <input type="button" type="submit" value="DRAMA">
-                        </li>
-                        <li>
-                            <input type="button" type="submit" value="AVENTURA">
-                        </li>
-                    </ul>
-                </div>
+    <div class='seach-group'>
+        <div class="dropdown">
+            <button class="btn dropdown-toggle btn-purple" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Botão dropdown
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Alguma ação</a>
+              <a class="dropdown-item" href="#">Outra ação</a>
+              <a class="dropdown-item" href="#">Alguma coisa aqui</a>
             </div>
+          </div>
+    </div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
