--- a/index.html
+++ b/index.html
@@ -22,18 +22,26 @@
         <h3 id=frase1>Q gênero você gostaria de assistir hoje?</h3>
     </div>
 
-    <div class='seach-group'>
-        <div class="dropdown">
-            <button class="btn dropdown-toggle btn-purple" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Botão dropdown
+    <div class='seach-group d-flex flex-wrap justify-content-center col-12'>
+        <div class="dropdown my-2 mr-2">
+            <button class="btn dropdown-toggle btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Botão dropdown
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Alguma ação</a>
-              <a class="dropdown-item" href="#">Outra ação</a>
-              <a class="dropdown-item" href="#">Alguma coisa aqui</a>
+                <a class="dropdown-item" href="#">Alguma ação</a>
+                <a class="dropdown-item" href="#">Outra ação</a>
+                <a class="dropdown-item" href="#">Alguma coisa aqui</a>
             </div>
-          </div>
+        </div>
+
+        <div class="input-search">
+
+            <input class="form-control mr-sm-2 input" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn my-2 my-sm-0 btn-purple" type="submit">Search</button>
+        </div>
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
