--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <div class='seach-group d-flex flex-wrap justify-content-center col-12'>
         <div class="dropdown my-2 mr-2">
-            <button class="btn dropdown-toggle btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
+            <button class="btn dropdown-toggle btn-secondary" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Botão dropdown
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -41,8 +41,16 @@
             <button class="btn my-2 my-sm-0 btn-purple" type="submit">Search</button>
         </div>
     </div>
-
-
+    
+    <div class="ring"></div>
+    <!-- Modal -->
+    <button id="modal-button" type="button" class="btn btn-outline-primary" data-toggle="modal"
+        data-target="#ExemploModalCentralizado">
+        ROLETA
+    </button>
+    <div id="modal-div"></div>
+    
+    <script src="js/modal.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -52,7 +60,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
