--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
         ROLETA
     </button>
     <div id="modal-div"></div>
-    
-    <script src="js/modal.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -58,6 +56,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/button.js"></script>
+
 </body>
 
 </html>
