--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/homestyle.css">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/resultados.css">
     <link rel="shortcut icon" href="./assets/img/qflix-icon.png" type="image/x-icon">
     <title>QFLIX</title>
 </head>
@@ -43,6 +44,10 @@
         ROLETA
     </button>
     <div id="modal-div"></div>
+
+    <main class="main-content" data-main>
+
+    </main>
     <script src="./js/modal.js"></script>
     <script src="./js/api.js"></script>
     <script src="./js/main.js"></script>
