--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
     <div class='seach-group d-flex flex-wrap justify-content-center col-12'>
         <div class="dropdown my-2 mr-2">
-            <select class="custom-select" id="genre-list">
-                <option selected>Choose...</option>
+            <select class="custom-select" id="genre-list" data-genre-list>
+                <option selected value="">Choose...</option>
             </select>
         </div>
 
         <div class="input-search">
 
-            <input class="form-control mr-sm-2 input" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn my-2 my-sm-0 btn-purple" type="submit">Search</button>
+            <input class="form-control mr-sm-2 input" type="search" data-input-search placeholder="Search" aria-label="Search">
+            <button class="btn my-2 my-sm-0 btn-purple" type="submit" data-search-button>Search</button>
         </div>
     </div>
 
