--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 <body>
 
-
     <header id="header-pag2">
         <img src="./assets/img/qflix-logo.png" alt="Logo QFLIX">
     </header>
@@ -26,14 +25,14 @@
     <div class='seach-group d-flex flex-wrap justify-content-center col-12'>
         <div class="dropdown my-2 mr-2">
             <select class="custom-select" id="genre-list" data-genre-list>
-                <option selected value="">Choose...</option>
+                <option selected value="">Escolha...</option>
             </select>
         </div>
 
         <div class="input-search">
 
-            <input class="form-control mr-sm-2 input" type="search" data-input-search placeholder="Search" aria-label="Search">
-            <button class="btn my-2 my-sm-0 btn-purple" type="submit" data-search-button>Search</button>
+            <input class="form-control mr-sm-2 input" type="search" data-input-search placeholder="Ou pesquise pelo nome do filme /" aria-label="Search">
+            <button class="btn my-2 my-sm-0 btn-purple" type="submit" data-search-button>Pesquisar</button>
         </div>
     </div>
 
