--- a/index.html
+++ b/index.html
@@ -40,17 +40,19 @@
     <div class="ring"></div>
     <!-- Modal -->
     <button id="modal-button" type="button" class="btn btn-outline-primary" data-toggle="modal"
-        data-target="#ExemploModalCentralizado">
+        data-target="#modal-roleta">
         ROLETA
     </button>
     <div id="modal-div"></div>
+    <div id="card-div"></div>
 
     <main class="main-content" data-main>
 
     </main>
-    <script src="./js/modal.js"></script>
+    
     <script src="./js/api.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
